<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application Name -->
    <string name="app_name">Board To Note</string>

    <!-- Theme Settings -->
    <string name="Theme_Light">light</string>
    <string name="Theme_Dark">dark</string>
    <string name="Theme_Default">default</string>

    <!-- Shortcuts -->
    <string name="shortcut_local">Local Notes</string>
    <string name="shortcut_cloud">Cloud Notes</string>

    <string name="title_activity_main">Study Note</string>
    <string name="search">Search</string>
    <string name="main_search_hint">Search Study Notes</string>
    <string name="edit_title">Edit Title</string>
    <string name="error">Error</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">Settings</string>
    <string name="shutter_button">Shutter Button</string>
    <string name="gallery_button">Gallery_Button</string>
    <string name="share">Share</string>
    <string name="collection_button">Collection Button</string>
    <string name="more_button">More Button</string>
    <string name="more_info">More Info</string>
    <string name="rename">Rename</string>
    <string name="account">Account</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="uid">UID</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign Out</string>
    <string name="cloud">Cloud</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="sp">sp</string>
    <string name="block_menu">Block Menu</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="more">More</string>
    <string name="share_this_block">Share this block</string>
    <string name="edit">Edit</string>
    <string name="upload_to_cloud">Upload to Cloud</string>
    <string name="change">Change</string>
    <string name="dismiss">Dismiss</string>
</resources>
