<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.unitech.boardtonote.activity.EditActivity">
    <item
        android:id="@+id/Menu_Crop"
        android:icon="@drawable/ic_crop_dark"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Menu_LocationState"
        android:icon="@drawable/ic_error_dark"
        android:title="@string/cloud"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Menu_Share"
        android:icon="@drawable/ic_share_dark"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>
